Embed code modal cut off fixen

--- a/app/stylesheets/starred_results.css.less
+++ b/app/stylesheets/starred_results.css.less
@@ -86,10 +86,11 @@
 }
 
 #saved-info {
-  overflow    : auto;
+  overflow    : visible;
   position    : fixed;
   top         : 39px;
   padding-top : 13px;
+  z-index     : 1;
 
   h1 {
     margin-bottom : 20px;
